--- a/styles/style.css
+++ b/styles/style.css
@@ -33,7 +33,7 @@ body {
 .cabecalho__menu__link {
   font-family: var(--fonte-primaria);
   font-weight: 600;
-  font-size: 24px;
+  font-size: 1.5rem;
   color: var(--cor-terciaria);
   text-decoration: none;
 }
@@ -47,22 +47,23 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  gap: 82px;
 }
 
 .apresentacao__conteudo {
-  width: 615px;
+  width: 50%;
   display: flex;
   flex-direction: column;
   gap: 40px;
 }
 
 .apresentacao__conteudo__titulo {
-  font-size: 36px;
+  font-size: 2.25rem;
   font-family: var(--fonte-primaria);
 }
 
 .apresentacao__conteudo__texto {
-  font-size: 24px;
+  font-size: 1.5rem;
   font-family: var(--fonte-secundaria);
 }
 
@@ -77,7 +78,7 @@ body {
 .apresentacao__links__subtitulo {
   font-family: var(--fonte-primaria);
   font-weight: 400;
-  font-size: 24px;
+  font-size: 1.5rem;
 }
 
 .apresentacao__links__link {
@@ -85,11 +86,11 @@ body {
   justify-content: center;
   align-items: center;
   gap: 16px;
-  width: 378px;
+  width: 50%;
   text-align: center;
   border: 2px solid var(--cor-terciaria);
   border-radius: 8px;
-  font-size: 24px;
+  font-size: 1.5rem;
   padding: 21.5px 0;
   text-decoration: none;
   color: var(--cor-secundaria);
@@ -100,6 +101,10 @@ body {
 .apresentacao__links__link:hover {
   background-color: var(--cor-hover);
   cursor: pointer;
+}
+
+.apresentacao__imagem {
+  width: 50%;
 }
 
 li {
@@ -117,6 +122,25 @@ li {
   padding: 24px;
   text-align: center;
   font-family: var(--fonte-secundaria);
-  font-size: 24px;
+  font-size: 1.5rem;
   font-weight: 400;
+}
+
+@media (max-width: 1200px) {
+  .cabecalho {
+    padding: 10%;
+  }
+
+  .cabecalho__menu {
+    justify-content: center;
+  }
+
+  .apresentacao {
+    flex-direction: column-reverse;
+    padding: 5%;
+  }
+
+  .apresentacao__conteudo {
+    width: auto;
+  }
 }
